ensure share button always visible and not behind right panel

--- a/app/assets/stylesheets/map/map.css.scss
+++ b/app/assets/stylesheets/map/map.css.scss
@@ -31,7 +31,7 @@ div.map {
   div.share {
     position:absolute;
     top:0;
-    right:0px;
+    right:57px;
     @include inline-block();
     padding:8px 20px 8px 30px;
     @include background(linear-gradient(rgba(#F2F2F2,0.01), rgba(#F2F2F2,0.2) 15%));
